--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
 
 <footer id="contact" class="footer">
   <h2>Kontakt</h2>
-  <p><span>E-Mail:</span> <a href="mailto:mr.vitaleve@gmail.com">mr.vitaleve@gmail.com</a></p>
+  <p><span>E-Mail:</span> <a href="mailto:mr.vetaleg@gmail.com">mr.vetaleg@gmail.com</a></p>
   <p><span>Standort:</span> Mastershausen, DE</p>
   <p class="tiny">© <span id="year"></span> · Alle Rechte vorbehalten.</p>
 </footer>
