--- a/index.html
+++ b/index.html
@@ -113,6 +113,15 @@
       </article>
 
       <article class="card">
+        <h3>Zeugnis (GFN GmbH)</h3>
+        <p>Zeugnis meiner Umschulung zum Fachinformatiker für Anwendungsentwicklung.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/Zeugnis_GFN.pdf" data-filename="Zeugnis_GFN.pdf">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Zeugnis_GFN.pdf">Im Browser ansehen</button>
+        </div>
+      </article>
+
+      <article class="card">
         <h3>Alle Unterlagen (ZIP)</h3>
         <p>Kompakte Sammlung aller Bewerbungsunterlagen in einer Datei.</p>
         <div class="card-actions">
