--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
       </article>
 
       <article class="card">
-        <h3>Zeugnisse & Zertifikate</h3>
+        <h3>Zertifikate</h3>
         <p>Nachweise über bisherige Abschlüsse, Weiterbildungen und relevante Zertifikate.</p>
         <div class="card-actions">
-          <button class="btn" type="button" data-download="docs/Zeugnisse.pdf" data-filename="Zeugnisse.pdf">Herunterladen</button>
-          <button class="btn ghost" type="button" data-view="docs/Zeugnisse.pdf">Im Browser ansehen</button>
+          <button class="btn" type="button" data-download="docs/Zertifikate.pdf" data-filename="Zertifikate.pdf">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Zertifikate.pdf">Im Browser ansehen</button>
         </div>
       </article>
 
