Update index, styles and script

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
 <header class="topbar" role="banner">
+  <div class="brand-mini">Bewerbung</div>
+  <button class="menu-toggle" aria-label="Menü öffnen" type="button">☰</button>
   <nav class="nav">
     <a href="#about">Über mich</a>
     <a href="#cv">Lebenslauf</a>
@@ -104,11 +106,11 @@
       </article>
 
       <article class="card">
-        <h3>Zertifikate</h3>
+        <h3>Zeugnisse & Zertifikate</h3>
         <p>Nachweise über bisherige Abschlüsse, Weiterbildungen und relevante Zertifikate.</p>
         <div class="card-actions">
-          <button class="btn" type="button" data-download="docs/Zertifikate.pdf" data-filename="Zertifikate.pdf">Herunterladen</button>
-          <button class="btn ghost" type="button" data-view="docs/Zertifikate.pdf">Im Browser ansehen</button>
+          <button class="btn" type="button" data-download="docs/Zeugnisse.pdf" data-filename="Zeugnisse.pdf">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Zeugnisse.pdf">Im Browser ansehen</button>
         </div>
       </article>
 
@@ -129,6 +131,20 @@
         </div>
       </article>
 
+    </div>
+  </section>
+
+  <section id="projects" class="section">
+    <h2>Projekte</h2>
+    <div class="projects">
+      <article class="proj">
+        <h3>Interactive Hero UI</h3>
+        <p>Hover-Effekt mit Bildkollage und animierter Typografie.</p>
+      </article>
+      <article class="proj">
+        <h3>API-Tooling</h3>
+        <p>Kleine Services für Automatisierung und Datenverarbeitung.</p>
+      </article>
     </div>
   </section>
 </main>
