--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body>
 <header class="topbar" role="banner">
-  <div class="brand-mini">Bewerbung</div>
+  <div class="header-left">
+    <div class="brand-mini">Bewerbung</div>
+  </div>
   <button class="menu-toggle" aria-label="Menü öffnen" type="button">☰</button>
   <nav class="nav">
     <a href="#about">Über mich</a>
@@ -19,11 +21,11 @@
     <a href="#docs">Unterlagen</a>
     <a href="#projects">Projekte</a>
     <a href="#contact">Kontakt</a>
+    <div class="lang-switch">
+      <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">DE</button>
+      <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">EN</button>
+    </div>
   </nav>
-  <div class="lang-switch" aria-label="Language switch">
-    <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">DE</button>
-    <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">EN</button>
-  </div>
 </header>
 
 <section class="hero" aria-label="Hero">
@@ -50,11 +52,7 @@
 <main>
   <section id="about" class="section">
     <h2>Über mich</h2>
-    <p>
-      Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum.
-      Während meiner Ausbildung habe ich Kenntnisse in Java, Python, Webentwicklung (HTML, CSS, JavaScript) und Datenbanken erworben.
-      Mein Ziel ist es, praktische Erfahrung in einem professionellen Umfeld zu sammeln und meine Fähigkeiten weiterzuentwickeln.
-    </p>
+    <p>Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum. Während meiner Ausbildung habe ich Kenntnisse in Java, Python, Webentwicklung (HTML, CSS, JavaScript) und Datenbanken erworben. Mein Ziel ist es, praktische Erfahrung in einem professionellen Umfeld zu sammeln und meine Fähigkeiten weiterzuentwickeln.</p>
   </section>
 
   <section id="cv" class="section">
@@ -75,7 +73,6 @@
   <section id="docs" class="section">
     <h2>Unterlagen</h2>
     <div class="cards">
-
       <article class="card">
         <h3>Anschreiben (DE)</h3>
         <p>Anschreiben für Bewerbungen auf ein Pflichtpraktikum im IT-Bereich.</p>
@@ -130,7 +127,6 @@
           <button class="btn" type="button" data-download="docs/Alle_Unterlagen.zip" data-filename="Alle_Unterlagen.zip">Herunterladen</button>
         </div>
       </article>
-
     </div>
   </section>
 
