--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 <body>
 <header class="topbar" role="banner">
-  <div class="header-left">
-    <div class="brand-mini">Bewerbung</div>
-  </div>
   <button class="menu-toggle" aria-label="Menü öffnen" type="button">☰</button>
   <nav class="nav">
     <a href="#about">Über mich</a>
@@ -21,11 +18,11 @@
     <a href="#docs">Unterlagen</a>
     <a href="#projects">Projekte</a>
     <a href="#contact">Kontakt</a>
-    <div class="lang-switch">
-      <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">DE</button>
-      <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">EN</button>
-    </div>
   </nav>
+  <div class="lang-switch" aria-label="Language switch">
+    <button class="lang-btn" data-lang="de" aria-pressed="true" type="button">DE</button>
+    <button class="lang-btn" data-lang="en" aria-pressed="false" type="button">EN</button>
+  </div>
 </header>
 
 <section class="hero" aria-label="Hero">
