--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   <meta name="description" content="Bewerbung, Lebenslauf, Projekte, Zeugnisse." />
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <!-- используем display=optional, чтобы не было «прыжка» из-за подмены шрифта -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=optional" rel="stylesheet">
 </head>
 <body>
 <header class="topbar" role="banner">
@@ -28,15 +29,15 @@
 <section class="hero" aria-label="Hero">
   <div class="hero-media" aria-hidden="true">
     <div class="grid">
-      <img src="assets/1.jpg" alt="">
-      <img src="assets/2.jpg" alt="">
-      <img src="assets/3.jpg" alt="">
-      <img src="assets/4.jpg" alt="">
-      <img src="assets/5.jpg" alt="">
-      <img src="assets/6.jpg" alt="">
-      <img src="assets/7.jpg" alt="">
-      <img src="assets/8.jpg" alt="">
-      <img src="assets/9.jpg" alt="">
+      <img src="assets/1.jpg" width="1000" height="1000" alt="">
+      <img src="assets/2.jpg" width="1000" height="1000" alt="">
+      <img src="assets/3.jpg" width="1000" height="1000" alt="">
+      <img src="assets/4.jpg" width="1000" height="1000" alt="">
+      <img src="assets/5.jpg" width="1000" height="1000" alt="">
+      <img src="assets/6.jpg" width="1000" height="1000" alt="">
+      <img src="assets/7.jpg" width="1000" height="1000" alt="">
+      <img src="assets/8.jpg" width="1000" height="1000" alt="">
+      <img src="assets/9.jpg" width="1000" height="1000" alt="">
     </div>
   </div>
   <h1 class="brand" tabindex="0">
