--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <meta name="description" content="Bewerbung, Lebenslauf, Projekte, Zeugnisse." />
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=optional" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
 <body>
 <header class="topbar" role="banner">
-  <button class="menu-toggle" aria-label="Menü öffnen" aria-expanded="false" type="button">
+  <button class="menu-toggle" aria-label="Menü öffnen/schließen" type="button">
     <span class="bar bar-top"></span>
     <span class="bar bar-mid"></span>
     <span class="bar bar-bot"></span>
@@ -32,19 +32,19 @@
 <section class="hero" aria-label="Hero">
   <div class="hero-media" aria-hidden="true">
     <div class="grid">
-      <img src="assets/1.jpg" width="1000" height="1000" alt="">
-      <img src="assets/2.jpg" width="1000" height="1000" alt="">
-      <img src="assets/3.jpg" width="1000" height="1000" alt="">
-      <img src="assets/4.jpg" width="1000" height="1000" alt="">
-      <img src="assets/5.jpg" width="1000" height="1000" alt="">
-      <img src="assets/6.jpg" width="1000" height="1000" alt="">
-      <img src="assets/7.jpg" width="1000" height="1000" alt="">
-      <img src="assets/8.jpg" width="1000" height="1000" alt="">
-      <img src="assets/9.jpg" width="1000" height="1000" alt="">
+      <img src="assets/1.jpg" alt="">
+      <img src="assets/2.jpg" alt="">
+      <img src="assets/3.jpg" alt="">
+      <img src="assets/4.jpg" alt="">
+      <img src="assets/5.jpg" alt="">
+      <img src="assets/6.jpg" alt="">
+      <img src="assets/7.jpg" alt="">
+      <img src="assets/8.jpg" alt="">
+      <img src="assets/9.jpg" alt="">
     </div>
   </div>
   <h1 class="brand" tabindex="0">
-    <span>B</span><span>e</span><span>w</span><span>e</span><span>r</span><span>b</span><span>u</span><span>n</span><span>g</span>
+    <span>P</span><span>r</span><span>a</span><span>k</span><span>t</span><span>i</span><span>k</span><span>u</span><span>m</span>
   </h1>
   <p class="subtitle">Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung</p>
   <a href="#docs" class="cta">Unterlagen ansehen</a>
@@ -53,7 +53,11 @@
 <main>
   <section id="about" class="section">
     <h2>Über mich</h2>
-    <p>Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum. Während meiner Ausbildung habe ich Kenntnisse in Java, Python, Webentwicklung (HTML, CSS, JavaScript) und Datenbanken erworben. Mein Ziel ist es, praktische Erfahrung in einem professionellen Umfeld zu sammeln und meine Fähigkeiten weiterzuentwickeln.</p>
+    <p>
+      Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum.
+      Während meiner Ausbildung habe ich Kenntnisse in Java, Python, Webentwicklung (HTML, CSS, JavaScript) und Datenbanken erworben.
+      Mein Ziel ist es, praktische Erfahrung in einem professionellen Umfeld zu sammeln und meine Fähigkeiten weiterzuentwickeln.
+    </p>
   </section>
 
   <section id="cv" class="section">
@@ -74,6 +78,7 @@
   <section id="docs" class="section">
     <h2>Unterlagen</h2>
     <div class="cards">
+
       <article class="card">
         <h3>Anschreiben (DE)</h3>
         <p>Anschreiben für Bewerbungen auf ein Pflichtpraktikum im IT-Bereich.</p>
@@ -113,35 +118,13 @@
       </article>
 
       <article class="card">
-        <h3>Zeugnis (GFN GmbH)</h3>
-        <p>Zeugnis meiner Umschulung zum Fachinformatiker für Anwendungsentwicklung.</p>
-        <div class="card-actions">
-          <button class="btn" type="button" data-download="docs/Zeugnis_GFN.pdf" data-filename="Zeugnis_GFN.pdf">Herunterladen</button>
-          <button class="btn ghost" type="button" data-view="docs/Zeugnis_GFN.pdf">Im Browser ansehen</button>
-        </div>
-      </article>
-
-      <article class="card">
         <h3>Alle Unterlagen (ZIP)</h3>
         <p>Kompakte Sammlung aller Bewerbungsunterlagen in einer Datei.</p>
         <div class="card-actions">
           <button class="btn" type="button" data-download="docs/Alle_Unterlagen.zip" data-filename="Alle_Unterlagen.zip">Herunterladen</button>
         </div>
       </article>
-    </div>
-  </section>
 
-  <section id="projects" class="section">
-    <h2>Projekte</h2>
-    <div class="projects">
-      <article class="proj">
-        <h3>Interactive Hero UI</h3>
-        <p>Hover-Effekt mit Bildkollage und animierter Typografie.</p>
-      </article>
-      <article class="proj">
-        <h3>API-Tooling</h3>
-        <p>Kleine Services für Automatisierung und Datenverarbeitung.</p>
-      </article>
     </div>
   </section>
 </main>
