--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <footer id="contact" class="footer">
   <h2>Kontakt</h2>
   <p><span>E-Mail:</span> <a href="mailto:mr.vetaleg@gmail.com">mr.vetaleg@gmail.com</a></p>
-  <p><span>Standort:</span> Mastershausen, DE</p>
+  <p><span>Standort:</span> Mastershausen, DE - Koblenz, DE</p>
   <p class="tiny">© <span id="year"></span> · Alle Rechte vorbehalten.</p>
 </footer>
 
