--- a/index.html
+++ b/index.html
@@ -3,34 +3,30 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-
   <title>Bewerbungsunterlagen — Dein Name</title>
   <meta name="description" content="Bewerbung, Lebenslauf, Projekte, Zeugnisse." />
-
-  <!-- Open Graph / SEO -->
   <meta property="og:type" content="website">
   <meta property="og:title" content="Bewerbungsunterlagen — Dein Name">
-  <meta property="og:description" content="Pflichtpraktikum (Anwendungsentwicklung). Lebenslauf, Anschreiben, Zeugnisse, Projekte.">
+  <meta property="og:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
   <meta property="og:image" content="assets/og.jpg">
-  <meta property="og:url" content="">
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Bewerbungsunterlagen — Dein Name">
-  <meta name="twitter:description" content="Pflichtpraktikum (Anwendungsentwicklung). Lebenslauf, Anschreiben, Zeugnisse, Projekte.">
+  <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
   <meta name="twitter:image" content="assets/og.jpg">
   <meta name="theme-color" content="#0b0d12">
-
+  <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
-<body>
+<body data-lang="de">
 <header class="topbar" role="banner">
   <button class="menu-toggle" aria-label="Menü">
     <span class="bar bar-top"></span>
     <span class="bar bar-mid"></span>
     <span class="bar bar-bot"></span>
   </button>
-  <nav class="nav">
+  <nav class="nav" role="navigation">
     <a href="#about">Über mich</a>
     <a href="#cv">Lebenslauf</a>
     <a href="#docs">Unterlagen</a>
@@ -65,53 +61,60 @@
       <img src="assets/9.jpg" alt="" loading="lazy">
     </div>
   </div>
-  <h1 class="brand" tabindex="0">
-    <span>B</span><span>E</span><span>W</span><span>E</span><span>R</span><span>B</span><span>U</span><span>N</span><span>G</span>
-  </h1>
+  <h1 class="brand" tabindex="0"><span>B</span><span>E</span><span>W</span><span>E</span><span>R</span><span>B</span><span>U</span><span>N</span><span>G</span></h1>
   <p class="subtitle">Pflichtpraktikum als Fachinformatiker für Anwendungsentwicklung</p>
   <a href="#docs" class="cta">Unterlagen ansehen</a>
 </section>
 
 <main>
-  <section id="about" class="section">
-    <h2>Über mich</h2>
-    <p>Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum. Während meiner Ausbildung habe ich Kenntnisse in Java, Python, Webentwicklung (HTML, CSS, JavaScript) und Datenbanken erworben. Mein Ziel ist es, praktische Erfahrung in einem professionellen Umfeld zu sammeln und meine Fähigkeiten weiterzuentwickeln.</p>
+  <section id="about" class="section" role="region" aria-labelledby="about-heading">
+    <h2 id="about-heading" class="de-only">Über mich</h2>
+    <h2 class="en-only">About me</h2>
+    <p class="de-only">Ich absolviere aktuell eine Umschulung zum Fachinformatiker für Anwendungsentwicklung und suche ab April 2026 ein Pflichtpraktikum. Während meiner Ausbildung habe ich Kenntnisse in Java, Python, Webentwicklung (HTML, CSS, JavaScript) und Datenbanken erworben. Mein Ziel ist es, praktische Erfahrung in einem professionellen Umfeld zu sammeln und meine Fähigkeiten weiterzuentwickeln.</p>
+    <p class="en-only">I am currently retraining as an IT specialist in application development and I am looking for a mandatory internship starting April 2026. I gained skills in Java, Python, web (HTML, CSS, JavaScript) and databases. I want hands-on experience in a professional environment.</p>
   </section>
 
-  <section id="cv" class="section">
-    <h2>Lebenslauf</h2>
+  <section id="cv" class="section" role="region" aria-labelledby="cv-heading">
+    <h2 id="cv-heading" class="de-only">Lebenslauf</h2>
+    <h2 class="en-only">CV</h2>
     <div class="timeline">
       <article>
-        <h3>Umschulung · GFN GmbH — Fachrichtung IT</h3>
-        <p>Schwerpunkte: Java, Python, HTML, CSS, JavaScript. Praxisphase: 22.04.2026–18.01.2027.</p>
+        <h3 class="de-only">Umschulung · GFN GmbH — Fachrichtung IT</h3>
+        <h3 class="en-only">Retraining · GFN GmbH — IT focus</h3>
+        <p class="de-only">Schwerpunkte: Java, Python, HTML, CSS, JavaScript. Praxisphase: 22.04.2026–18.01.2027.</p>
+        <p class="en-only">Focus: Java, Python, HTML, CSS, JavaScript. Practical phase: 22/04/2026–18/01/2027.</p>
       </article>
       <article>
-        <h3>Bisherige Erfahrungen</h3>
-        <p>Eigene Projekte im Bereich Webentwicklung, API-Design, Automatisierung und Benutzeroberflächen.</p>
+        <h3 class="de-only">Bisherige Erfahrungen</h3>
+        <h3 class="en-only">Previous experience</h3>
+        <p class="de-only">Eigene Projekte im Bereich Webentwicklung, API-Design, Automatisierung und Benutzeroberflächen.</p>
+        <p class="en-only">Personal projects in web development, API design, automation and UIs.</p>
       </article>
     </div>
-    <a class="btn ghost" href="#docs">Kompletter Lebenslauf unten</a>
+    <a class="btn ghost de-only" href="#docs">Kompletter Lebenslauf unten</a>
+    <a class="btn ghost en-only" href="#docs">Full résumé below</a>
   </section>
 
-  <section id="docs" class="section">
-    <h2>Unterlagen</h2>
-    <div class="cards">
+  <section id="docs" class="section" role="region" aria-labelledby="docs-heading">
+    <h2 id="docs-heading" class="de-only">Unterlagen</h2>
+    <h2 class="en-only">Documents</h2>
 
+    <div class="cards">
       <article class="card de-only">
         <h3>Anschreiben (DE)</h3>
         <p>Anschreiben für ein Pflichtpraktikum im IT-Bereich.</p>
         <div class="card-actions doc-actions">
-          <button class="btn" type="button" data-download="docs/Anschreiben_DE.pdf" data-filename="Anschreiben_DE.pdf">Herunterladen</button>
-          <button class="btn ghost" type="button" data-view="docs/Anschreiben_DE.pdf">Ansehen</button>
+          <button class="btn" type="button" data-download="docs/Anschreiben_DE.pdf" data-filename="Anschreiben_DE.pdf" data-stats-key="Anschreiben_DE">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Anschreiben_DE.pdf" data-stats-key="Anschreiben_DE_view">Ansehen</button>
         </div>
       </article>
 
-      <article class="card en-only" hidden>
+      <article class="card en-only">
         <h3>Cover Letter (EN)</h3>
         <p>Cover letter for an internship in software development.</p>
         <div class="card-actions doc-actions">
-          <button class="btn" type="button" data-download="docs/CoverLetter_EN.pdf" data-filename="CoverLetter_EN.pdf">Download</button>
-          <button class="btn ghost" type="button" data-view="docs/CoverLetter_EN.pdf">View</button>
+          <button class="btn" type="button" data-download="docs/CoverLetter_EN.pdf" data-filename="CoverLetter_EN.pdf" data-stats-key="CoverLetter_EN">Download</button>
+          <button class="btn ghost" type="button" data-view="docs/CoverLetter_EN.pdf" data-stats-key="CoverLetter_EN_view">View</button>
         </div>
       </article>
 
@@ -119,51 +122,77 @@
         <h3>Lebenslauf (DE)</h3>
         <p>Aktueller Lebenslauf.</p>
         <div class="card-actions doc-actions">
-          <button class="btn" type="button" data-download="docs/Lebenslauf_DE.pdf" data-filename="Lebenslauf_DE.pdf">Herunterladen</button>
-          <button class="btn ghost" type="button" data-view="docs/Lebenslauf_DE.pdf">Ansehen</button>
+          <button class="btn" type="button" data-download="docs/Lebenslauf_DE.pdf" data-filename="Lebenslauf_DE.pdf" data-stats-key="Lebenslauf_DE">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Lebenslauf_DE.pdf" data-stats-key="Lebenslauf_DE_view">Ansehen</button>
         </div>
       </article>
 
-      <article class="card en-only" hidden>
+      <article class="card en-only">
         <h3>CV (EN)</h3>
         <p>Current résumé in English.</p>
         <div class="card-actions doc-actions">
-          <button class="btn" type="button" data-download="docs/CV_EN.pdf" data-filename="CV_EN.pdf">Download</button>
-          <button class="btn ghost" type="button" data-view="docs/CV_EN.pdf">View</button>
+          <button class="btn" type="button" data-download="docs/CV_EN.pdf" data-filename="CV_EN.pdf" data-stats-key="CV_EN">Download</button>
+          <button class="btn ghost" type="button" data-view="docs/CV_EN.pdf" data-stats-key="CV_EN_view">View</button>
         </div>
       </article>
 
-      <article class="card">
+      <article class="card de-only">
         <h3>Zeugnisse & Zertifikate</h3>
         <p>Nachweise über Abschlüsse, Weiterbildungen und relevante Zertifikate.</p>
         <div class="card-actions">
-          <button class="btn" type="button" data-download="docs/Zeugnisse.pdf" data-filename="Zeugnisse.pdf">Herunterladen</button>
-          <button class="btn ghost" type="button" data-view="docs/Zeugnisse.pdf">Im Browser ansehen</button>
+          <button class="btn" type="button" data-download="docs/Zeugnisse.pdf" data-filename="Zeugnisse.pdf" data-stats-key="Zeugnisse">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Zeugnisse.pdf" data-stats-key="Zeugnisse_view">Ansehen</button>
         </div>
       </article>
 
-      <article class="card">
+      <article class="card en-only">
+        <h3>Certificates</h3>
+        <p>Proof of degrees, trainings and relevant certificates.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/Certificates.pdf" data-filename="Certificates.pdf" data-stats-key="Certificates">Download</button>
+          <button class="btn ghost" type="button" data-view="docs/Certificates.pdf" data-stats-key="Certificates_view">View</button>
+        </div>
+      </article>
+
+      <article class="card de-only">
         <h3>Zeugnis (GFN GmbH)</h3>
         <p>Zeugnis meiner Umschulung zum Fachinformatiker für Anwendungsentwicklung.</p>
         <div class="card-actions">
-          <button class="btn" type="button" data-download="docs/Zeugnis_GFN.pdf" data-filename="Zeugnis_GFN.pdf">Herunterladen</button>
-          <button class="btn ghost" type="button" data-view="docs/Zeugnis_GFN.pdf">Im Browser ansehen</button>
+          <button class="btn" type="button" data-download="docs/Zeugnis_GFN.pdf" data-filename="Zeugnis_GFN.pdf" data-stats-key="Zeugnis_GFN">Herunterladen</button>
+          <button class="btn ghost" type="button" data-view="docs/Zeugnis_GFN.pdf" data-stats-key="Zeugnis_GFN_view">Ansehen</button>
         </div>
       </article>
 
-      <article class="card">
+      <article class="card en-only">
+        <h3>Certificate (GFN GmbH)</h3>
+        <p>Certificate of my retraining as an IT specialist in application development.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/Certificate_GFN.pdf" data-filename="Certificate_GFN.pdf" data-stats-key="Certificate_GFN">Download</button>
+          <button class="btn ghost" type="button" data-view="docs/Certificate_GFN.pdf" data-stats-key="Certificate_GFN_view">View</button>
+        </div>
+      </article>
+
+      <article class="card de-only">
         <h3>Alle Unterlagen (ZIP)</h3>
         <p>Gesamtes Paket aller Dokumente.</p>
         <div class="card-actions">
-          <button class="btn" type="button" data-download="docs/Alle_Unterlagen.zip" data-filename="Alle_Unterlagen.zip">Herunterladen</button>
+          <button class="btn" type="button" data-download="docs/Alle_Unterlagen_DE.zip" data-filename="Alle_Unterlagen_DE.zip" data-stats-key="ZIP_DE">Herunterladen</button>
         </div>
       </article>
 
+      <article class="card en-only">
+        <h3>All Documents (ZIP)</h3>
+        <p>Complete package of all documents.</p>
+        <div class="card-actions">
+          <button class="btn" type="button" data-download="docs/All_Documents_EN.zip" data-filename="All_Documents_EN.zip" data-stats-key="ZIP_EN">Download</button>
+        </div>
+      </article>
     </div>
   </section>
 
-  <section id="projects" class="section">
-    <h2>Ausgewählte Projekte</h2>
+  <section id="projects" class="section" role="region" aria-labelledby="projects-heading">
+    <h2 id="projects-heading" class="de-only">Ausgewählte Projekte</h2>
+    <h2 class="en-only">Selected projects</h2>
     <div class="projects">
       <article class="proj">
         <h3>Travel World UI</h3>
@@ -177,34 +206,35 @@
   </section>
 </main>
 
-<footer id="contact" class="footer">
-  <h2>Kontakt</h2>
-  <p><span>E-Mail:</span> <a href="mailto:mr.vetaleg@gmail.com">mr.vetaleg@gmail.com</a></p>
-  <p><span>Standort:</span> Mastershausen – Koblenz, DE</p>
-
+<footer id="contact" class="footer" role="contentinfo" aria-labelledby="contact-heading">
+  <h2 id="contact-heading" class="de-only">Kontakt</h2>
+  <h2 class="en-only">Contact</h2>
+  <p><span class="de-only">E-Mail:</span><span class="en-only">Email:</span> <a href="mailto:mr.vetaleg@gmail.com">mr.vetaleg@gmail.com</a></p>
+  <p><span class="de-only">Standort:</span><span class="en-only">Location:</span> Mastershausen – Koblenz, DE</p>
   <div class="contact-actions">
-    <a id="contact-email-btn" class="btn" href="mailto:mr.vetaleg@gmail.com?subject=Praktikum%20/%20Internship">E-Mail senden</a>
-    <a id="contact-linkedin-btn" class="btn ghost" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile" target="_blank" rel="noopener">LinkedIn öffnen</a>
+    <a id="contact-email-btn" class="btn de-only" href="mailto:mr.vetaleg@gmail.com?subject=Praktikum%20/%20Internship">E-Mail senden</a>
+    <a id="contact-email-btn-en" class="btn en-only" href="mailto:mr.vetaleg@gmail.com?subject=Internship%20application">Send email</a>
+    <a id="contact-linkedin-btn" class="btn ghost de-only" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">LinkedIn öffnen</a>
+    <a id="contact-linkedin-btn-en" class="btn ghost en-only" href="https://www.linkedin.com/in/vitalijs-ivanovs-32007b336/" target="_blank" rel="noopener">Open LinkedIn</a>
   </div>
-
-  <p class="tiny">© <span id="year"></span> · Alle Rechte vorbehalten.</p>
-
+  <p class="tiny">© <span id="year"></span> · <span class="de-only">Alle Rechte vorbehalten.</span><span class="en-only">All rights reserved.</span></p>
   <div class="qr-box">
-    <p>📱 Scanne den QR-Code für schnellen Zugriff:</p>
-    <img id="qr-img" src="" alt="QR-Code zum Bewerbungsportal" width="160" height="160" loading="lazy"/>
+    <p class="de-only">📱 Scanne den QR-Code für schnellen Zugriff:</p>
+    <p class="en-only">📱 Scan the QR code for quick access:</p>
+    <img id="qr-img" src="" alt="QR" width="160" height="160" loading="lazy"/>
   </div>
 </footer>
+
+<div id="pdfModal" class="modal" aria-hidden="true">
+  <div class="modal-content" role="dialog" aria-modal="true" aria-label="Preview">
+    <button class="close" type="button" aria-label="Close" title="Close">&times;</button>
+    <iframe id="pdfFrame" src="" title="Dokument" loading="lazy"></iframe>
+  </div>
+</div>
 
 <div class="quick-footer">
   <a class="qf-docs" href="#docs">📄 Unterlagen</a>
   <a class="qf-contact" href="#contact">📧 Kontakt</a>
-</div>
-
-<div id="pdfModal" class="modal" aria-hidden="true">
-  <div class="modal-content" role="dialog" aria-modal="true" aria-label="Dokument-Vorschau">
-    <button class="close" type="button" aria-label="Schließen" title="Schließen">&times;</button>
-    <iframe id="pdfFrame" src="" title="Dokument" loading="lazy"></iframe>
-  </div>
 </div>
 
 <script src="script.js"></script>
