--- a/index.html
+++ b/index.html
@@ -3,17 +3,20 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Bewerbungsunterlagen — Dein Name</title>
+  <title>Vitalijs Ivanovs Praktikum</title>
   <meta name="description" content="Bewerbung, Lebenslauf, Projekte, Zeugnisse." />
   <meta property="og:type" content="website">
-  <meta property="og:title" content="Bewerbungsunterlagen — Dein Name">
+  <meta property="og:title" content="Vitalijs Ivanovs Praktikum">
   <meta property="og:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
   <meta property="og:image" content="assets/og.jpg">
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Bewerbungsunterlagen — Dein Name">
+  <meta name="twitter:title" content="Vitalijs Ivanovs Praktikum">
   <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
   <meta name="twitter:image" content="assets/og.jpg">
   <meta name="theme-color" content="#0b0d12">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png">
+  <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
   <link rel="manifest" href="manifest.json" />
   <link rel="stylesheet" href="styles.css" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
