--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
   <meta name="twitter:description" content="Lebenslauf, Anschreiben, Projekte, Zertifikate. Praktikum 2026.">
   <meta name="twitter:image" content="assets/og.jpg">
   <meta name="theme-color" content="#0b0d12">
-  <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32.png">
-  <link rel="apple-touch-icon" href="assets/apple-touch-icon.png">
-  <link rel="manifest" href="manifest.json" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="icon" href="favicon.ico?v=3">
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=3">
+  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16.png?v=3">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png?v=3">
+  <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
 </head>
@@ -53,15 +54,15 @@
 <section class="hero" aria-label="Hero">
   <div class="hero-media" aria-hidden="true">
     <div class="grid">
-      <img src="assets/1.jpg" alt="" loading="lazy">
-      <img src="assets/2.jpg" alt="" loading="lazy">
-      <img src="assets/3.jpg" alt="" loading="lazy">
-      <img src="assets/4.jpg" alt="" loading="lazy">
-      <img src="assets/5.jpg" alt="" loading="lazy">
-      <img src="assets/6.jpg" alt="" loading="lazy">
-      <img src="assets/7.jpg" alt="" loading="lazy">
-      <img src="assets/8.jpg" alt="" loading="lazy">
-      <img src="assets/9.jpg" alt="" loading="lazy">
+      <img src="assets/1.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/2.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/3.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/4.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/5.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/6.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/7.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/8.jpg" alt="" loading="lazy" width="1600" height="900">
+      <img src="assets/9.jpg" alt="" loading="lazy" width="1600" height="900">
     </div>
   </div>
   <h1 class="brand" tabindex="0"><span>B</span><span>E</span><span>W</span><span>E</span><span>R</span><span>B</span><span>U</span><span>N</span><span>G</span></h1>
@@ -224,7 +225,7 @@
   <div class="qr-box">
     <p class="de-only">📱 Scanne den QR-Code für schnellen Zugriff:</p>
     <p class="en-only">📱 Scan the QR code for quick access:</p>
-    <img id="qr-img" src="" alt="QR" width="160" height="160" loading="lazy"/>
+    <img id="qr-img" src="" alt="QR" width="160" height="160" loading="lazy">
   </div>
 </footer>
 
